@startuml

title __CHART's Class Diagram__\n

  namespace TFA {
    namespace vista {
      namespace Chart {
        class TFA.vista.Chart.BarChart {
            + BarChart()
            + createChart()
            + createDataset()
        }
      }
    }
  }
  

  namespace TFA {
    namespace vista {
      namespace Chart {
        abstract class TFA.vista.Chart.Chart {
            # chart : JFreeChart
            # dataMap : Map<String, Integer>
            # title : String
            + Chart()
            {abstract} + createChart()
            {abstract} + createDataset()
            + drawChart()
        }
      }
    }
  }
  

  namespace TFA {
    namespace vista {
      namespace Chart {
        class TFA.vista.Chart.PieChart {
            + PieChart()
            + createChart()
            + createDataset()
        }
      }
    }
  }
  

  TFA.vista.Chart.BarChart -up-|> TFA.vista.Chart.Chart
  TFA.vista.Chart.PieChart -up-|> TFA.vista.Chart.Chart


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
